Compilateur jagger/jagger-GAVALDA/Jagger.java
/* Generated By:JavaCC: Do not edit this line. Jagger.java */
//import AST.*;

public class Jagger implements JaggerConstants {
    public static void main(String args[]) throws ParseException {
        Jagger parser = new Jagger(System.in);
        parser.mainloop();
    }

  static final public void mainloop() throws ParseException {
  Statement a;
     Scope s = new Scope();
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      a = statement(s);
      jj_consume_token(EOL);
        Evaluator EV = new Evaluator(s);
        TypeChecker TC = new TypeChecker();
        PrettyPrinter PP = new PrettyPrinter();

        TC.visit(a);
        EV.visit(a);
        PP.visit(a);

        System.out.println("Type: " + TC.aType);
        PP.visit(a);
        System.out.println(PP.aString);
        System.out.println("=> "+EV.aString);
    }
    jj_consume_token(0);
  }

  static final public Statement statement(Scope s) throws ParseException {
 Statement a, b; Expression e; Token t; Scope parent = s;
    if (jj_2_8(2)) {
      jj_consume_token(LET);
      if (jj_2_2(2)) {
        jj_consume_token(EOL);
      } else {
        ;
      }
                       s = new Scope(parent);
      label_2:
      while (true) {
        if (jj_2_3(2)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(VARIABLE);
        t = jj_consume_token(ID);
        jj_consume_token(COLON);
        jj_consume_token(EQ);
        e = expression(s);
                                                            {if (true) return new Initialization(new ID(t.toString()), e, parent);}
      }
      jj_consume_token(IN);
      a = statement(s);
                            s.addStatement(a);
      label_3:
      while (true) {
        if (jj_2_4(2)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(COMMA);
        a = statement(s);
                                      s.addStatement(a);
      }
      jj_consume_token(END);
                {if (true) return s;}
    } else if (jj_2_9(2)) {
      jj_consume_token(VARIABLE);
      t = jj_consume_token(ID);
      jj_consume_token(COLON);
      jj_consume_token(EQ);
      e = expression(s);
                                                     {if (true) return new Initialization(new ID(t.toString()), e, s);}
    } else if (jj_2_10(2)) {
      t = jj_consume_token(ID);
      jj_consume_token(COLON);
      jj_consume_token(EQ);
      e = expression(s);
                                           {if (true) return new Assign(new Variable(t.toString()), e);}
    } else if (jj_2_11(2)) {
      e = expression(s);
                        {if (true) return e;}
    } else if (jj_2_12(2)) {
      jj_consume_token(WHILE);
      e = expression(s);
      jj_consume_token(DO);
      if (jj_2_5(2)) {
        jj_consume_token(EOL);
      } else {
        ;
      }
      b = statement(s);
                                                            {if (true) return new WhileDo(e, b);}
    } else if (jj_2_13(2)) {
      jj_consume_token(FOR);
      a = statement(s);
      jj_consume_token(TO);
      e = expression(s);
      jj_consume_token(DO);
      b = statement(s);
                                                                     {if (true) return new For(a, e, b);}
    } else if (jj_2_14(2)) {
      jj_consume_token(PRINT);
      jj_consume_token(LPAR);
      e = expression(s);
      jj_consume_token(RPAR);
                                             {if (true) return new Print(e);}
    } else if (jj_2_15(2)) {
      jj_consume_token(IF);
      label_4:
      while (true) {
        if (jj_2_6(2)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(IF);
      }
      e = expression(s);
      jj_consume_token(THEN);
      a = statement(s);
      jj_consume_token(ELSE);
      b = statement(s);
      label_5:
      while (true) {
        if (jj_2_7(2)) {
          ;
        } else {
          break label_5;
        }
        ThenElse(e, s);
      }
                                                                                                  {if (true) return new ifThenElse(e, a, b);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement ThenElse(Expression e, Scope s) throws ParseException {
 Statement a, b;
    jj_consume_token(THEN);
    a = statement(s);
    jj_consume_token(ELSE);
    b = statement(s);
                                                 {if (true) return new ifThenElse(e, a, b);}
    throw new Error("Missing return statement in function");
  }

  static final public Expression expression(Scope s) throws ParseException {
  Expression op1, op2, out;
    op1 = arithmetic(s);
                         out = op1;
    if (jj_2_22(2)) {
      if (jj_2_16(2)) {
        jj_consume_token(30);
        op2 = arithmetic(s);
                                out = new BoolBinOp(op1, op2, "<");
      } else if (jj_2_17(2)) {
        jj_consume_token(31);
        op2 = arithmetic(s);
                                out = new BoolBinOp(op1, op2, ">");
      } else if (jj_2_18(2)) {
        jj_consume_token(32);
        op2 = arithmetic(s);
                                 out = new BoolBinOp(op1, op2, "<=");
      } else if (jj_2_19(2)) {
        jj_consume_token(33);
        op2 = arithmetic(s);
                                 out = new BoolBinOp(op1, op2, ">=");
      } else if (jj_2_20(2)) {
        jj_consume_token(EQ);
        op2 = arithmetic(s);
                                out = new BoolBinOp(op1, op2, "=");
      } else if (jj_2_21(2)) {
        jj_consume_token(34);
        op2 = arithmetic(s);
                                 out = new BoolBinOp(op1, op2, "<>");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
        {if (true) return out;}
    throw new Error("Missing return statement in function");
  }

  static final public Expression arithmetic(Scope s) throws ParseException {
 Expression op1, op2;
    op1 = term(s);
    label_6:
    while (true) {
      if (jj_2_23(2)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_24(2)) {
        jj_consume_token(35);
        op2 = term(s);
                          op1 = new BinOp(op1, op2, "+");
      } else if (jj_2_25(2)) {
        jj_consume_token(36);
        op2 = term(s);
                          op1 = new BinOp(op1, op2, "-");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        {if (true) return op1;}
    throw new Error("Missing return statement in function");
  }

// Term.
// T -> F ('*'F | '/'F)*
  static final public Expression term(Scope s) throws ParseException {
  Expression op1, op2;
    op1 = factor(s);
    label_7:
    while (true) {
      if (jj_2_26(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_27(2)) {
        jj_consume_token(37);
        op2 = factor(s);
                            op1 = new BinOp(op1, op2, "*");
      } else if (jj_2_28(2)) {
        jj_consume_token(38);
        op2 = factor(s);
                            op1 = new BinOp(op1, op2, "/");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
        {if (true) return op1;}
    throw new Error("Missing return statement in function");
  }

// Factor of an expression.
// F -> <NUMBER> | "(" E ")"
  static final public Expression factor(Scope s) throws ParseException {
  Token t; Expression exp;
    if (jj_2_29(2)) {
      t = jj_consume_token(NUMBER);
                   {if (true) return new Number(Integer.parseInt(t.toString()));}
    } else if (jj_2_30(2)) {
      t = jj_consume_token(STRING);
                     {if (true) return new Strings(t.toString());}
    } else if (jj_2_31(2)) {
      t = jj_consume_token(ID);
                 {if (true) return s.getVariable(t.toString());}
    } else if (jj_2_32(2)) {
      jj_consume_token(35);
      t = jj_consume_token(NUMBER);
                        {if (true) return new UnOp(new Number(Integer.parseInt(t.toString())), "+");}
    } else if (jj_2_33(2)) {
      jj_consume_token(36);
      t = jj_consume_token(NUMBER);
                        {if (true) return new UnOp(new Number(Integer.parseInt(t.toString())), "-");}
    } else if (jj_2_34(2)) {
      jj_consume_token(LPAR);
      exp = expression(s);
      jj_consume_token(RPAR);
                                    {if (true) return exp;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_3_8() {
    if (jj_scan_token(LET)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) jj_scanpos = xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_3()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(IN)) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_34() {
    if (jj_scan_token(LPAR)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_8()) return true;
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  static private boolean jj_3_33() {
    if (jj_scan_token(36)) return true;
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  static private boolean jj_3_31() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3_32() {
    if (jj_scan_token(35)) return true;
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  static private boolean jj_3_30() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_29()) {
    jj_scanpos = xsp;
    if (jj_3_30()) {
    jj_scanpos = xsp;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_29() {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  static private boolean jj_3_28() {
    if (jj_scan_token(38)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_26() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_27()) {
    jj_scanpos = xsp;
    if (jj_3_28()) return true;
    }
    return false;
  }

  static private boolean jj_3_27() {
    if (jj_scan_token(37)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_3R_13()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_26()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_25() {
    if (jj_scan_token(36)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3_23() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) return true;
    }
    return false;
  }

  static private boolean jj_3_24() {
    if (jj_scan_token(35)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_3R_12()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_23()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_21() {
    if (jj_scan_token(34)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_20() {
    if (jj_scan_token(EQ)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_19() {
    if (jj_scan_token(33)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_18() {
    if (jj_scan_token(32)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_17() {
    if (jj_scan_token(31)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_16() {
    if (jj_scan_token(30)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_22() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) {
    jj_scanpos = xsp;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) {
    jj_scanpos = xsp;
    if (jj_3_21()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_3R_11()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_22()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(IF)) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_scan_token(THEN)) return true;
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3_15() {
    if (jj_scan_token(IF)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_6()) { jj_scanpos = xsp; break; }
    }
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_14() {
    if (jj_scan_token(PRINT)) return true;
    if (jj_scan_token(LPAR)) return true;
    return false;
  }

  static private boolean jj_3_13() {
    if (jj_scan_token(FOR)) return true;
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3_12() {
    if (jj_scan_token(WHILE)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(COLON)) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_scan_token(VARIABLE)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(VARIABLE)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public JaggerTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  /** Whether we are looking ahead. */
  static private boolean jj_lookingAhead = false;
  static private boolean jj_semLA;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[34];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Jagger(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Jagger(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new JaggerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public Jagger(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new JaggerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public Jagger(JaggerTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(JaggerTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }
